@startuml er_model
hide circle
skinparam linetype ortho

entity "usuarios" as usuarios {
  *id : BIGINT
  --
  correo
  password_hash
  nombre
  apellido
  rol
}

entity "estudiantes" as estudiantes {
  *id : BIGINT
  --
  usuario_id
  apoderado_id
  nro_matricula
  fecha_nacimiento
}

entity "docentes" as docentes {
  *id : BIGINT
  --
  usuario_id
  nro_empleado
}

entity "anio_lectivo" as ay {
  *id : BIGINT
  --
  nombre
  inicio
  fin
}

entity "cursos" as cursos {
  *id : BIGINT
  --
  nombre
  nivel
  anio_lectivo_id
}

entity "asignaturas" as asignaturas {
  *id : BIGINT
  --
  codigo
  nombre
}

entity "asignatura_curso" as ac {
  *id : BIGINT
  --
  curso_id
  asignatura_id
  docente_id
}

entity "matriculas" as matriculas {
  *id : BIGINT
  --
  estudiante_id
  curso_id
  fecha_matricula
}

entity "sesiones" as sesiones {
  *id : BIGINT
  --
  curso_id
  asignatura_id
  docente_id
  fecha
}

entity "asistencias" as asistencias {
  *id : BIGINT
  --
  sesion_id
  estudiante_id
  estado
}

entity "anotaciones" as anotaciones {
  *id : BIGINT
  --
  estudiante_id
  docente_id
  fecha
  tipo
}

entity "evaluaciones" as evaluaciones {
  *id : BIGINT
  --
  titulo
  fecha
  peso
  asignatura_curso_id
}

entity "calificaciones" as calificaciones {
  *id : BIGINT
  --
  evaluacion_id
  estudiante_id
  nota
}


entity "apoderados" as apoderados {
  *id : BIGINT
  --
  usuario_id
  rut
  telefono_emergencia
}

entity "refresh_tokens" as refresh_tokens {
  *id : BIGINT
  --
  usuario_id
  token
  fecha_expiracion
  revocado
}

entity "token_blacklist" as token_blacklist {
  *id : BIGINT
  --
  token
  usuario_id
  razon
  blacklisted_en
}



usuarios ||--o{ estudiantes 
usuarios ||--o{ docentes 
usuarios ||--o{ apoderados 
apoderados ||--o{ estudiantes 
cursos }o--|| ay
cursos ||--o{ ac
asignaturas ||--o{ ac
ac ||--o{ sesiones
matriculas }o--|| estudiantes
matriculas }o--|| cursos
sesiones ||--o{ asistencias
evaluaciones ||--o{ calificaciones
estudiantes ||--o{ calificaciones
estudiantes ||--o{ anotaciones
docentes ||--o{ anotaciones
usuarios ||--o{ refresh_tokens
usuarios ||--o{ token_blacklist
@enduml
